--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "electron-with-create-react-app",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "electron": "^1.7.9",
+    "electron-builder": "^20.22.0",
+    "foreman": "^2.0.0",
+    "react-scripts": "0.8.5"
+  },
   "dependencies": {
-    "node-hid": "^0.7.3",
     "react": "^16.1.1",
     "react-dom": "^16.1.1"
   },
@@ -15,17 +20,14 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "electron": "electron .",
+    "dev": "nf start -p 3000",
     "electron-start": "node src/electron-wait-react",
     "react-start": "react-scripts start",
     "pack": "build --dir",
-    "dist": "npm run build && build",
-    "postinstall": "install-app-deps",
-    "dev": "nf start -p 3000"
-  },
-  "devDependencies": {
-    "electron-builder": "^20.22.0"
+    "dist": "npm run build && build"
   },
   "build": {
+    "extends": null,
     "appId": "io.keywalletpro.keywallet",
     "win": {
       "icon": "https://cdn2.iconfinder.com/data/icons/designer-skills/128/react-256.png"
