--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "is-electron": "^2.1.0",
     "node-hid": "^0.7.3",
     "react": "^16.1.1",
     "react-dom": "^16.1.1"
